<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Twitter Search</string>
    <string name="menu_settings">Settings</string>
    <string name="greeting">Welcome to the Twitter Search!</string>
	<string name="hint">Enter your Twitter Search</string>
    <string name="button_search">Search</string>
    <string name="results">Your Search Results:</string>
    <string name="username">Username</string>
    <string name="tweet">This is an awesome tweet!!</string>
    <string name="image_desc">The user image.</string>
    
</resources>